# cropsiss

./: MANIFEST.in  Makefile  README.md  entry_points.cfg  requirements.txt  setup.cfg
.circleci/: config.yml
cropsiss/: __init__.py  __main__.py  exceptions.py
cropsiss/cli/: __init__.py  browse.py  cancel.py  config.py  login.py  root.py  sheet.py
cropsiss/google/: __init__.py  abstract.py  base.py  credentials.py  mail.py  sheet.py
cropsiss/templates/: notify_fail.html  notify_success.html
docker/: Dockerfile  install_chromium.sh
tests/: __init__.py
tests/cli/: test_config.py  test_login.py  test_root.py  test_sheet.py
tests/cli/mails/: mercari_sold_mail_with_id.txt  yahoo_auction_sold_mail_without_id.txt
tests/google/: test_credentials.py  test_mail.py  test_sheet.py
tests/test_cli/: test_browse.py  test_cancel.py  test_login.py  test_sheet.py
tests/test_cli/mails/: mercari_sold_mail_without_id.txt  yahoo_auction_sold_mail_with_id.txt
tests/test_google/: test_sheet.py
tests/test_platforms/: mercari_edit_page.html  test_mercari.py  test_yahoo_auction.py
tests/test_platforms/mercari_edit_page_files/: 3765626403484289  container.html  f(12).txt  f(14).txt  f(15).txt  f(5).txt  f(9).txt  fbevents.js.ダウンロード  framework-64f2a4bf61505b5610fe.js.ダウンロード  gtm.js.ダウンロード  js  main.js.ダウンロード  webpack-runtime-f844415ccc4866368b51.js.ダウンロード
