[metadata]
name = cropsiss
version = attr: cropsiss.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/huisint/cropsiss
description = Cross Platform Simultaneously Selling System
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    click>=8.1.3
    click_log>=0.4.0
    dataclasses_json>=0.5.7
    google-auth>=2.9.1
    google-auth-oauthlib>=0.5.2
    google-api-python-client>=2.53.0
    jinja2>=3.1.2
    selenium>=4.3.0
    chromedriver-binary-auto>=0.1.2
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119

